--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "devDependencies": {
+	"scripts": {
+    "cy:open": "cypress open"
+  },
+	"devDependencies": {
     "@tsconfig/node16": "^16.1.3",
     "@types/node": "^22.12.0",
     "cypress": "^14.0.1",
