--- a/compass.yml
+++ b/compass.yml
@@ -1,4 +1,4 @@
-name: Cypress.Voyager.Tests
+name: Voyager.Cypress.S3
 id: ari:cloud:compass:6f4ff44f-3daf-4331-936e-f105ac8a0cc5:component/dbdd9e20-37cf-4147-9a6c-5bc93cc76ce7/9949eab4-94de-4e3a-a49f-5b4457e502ba
 description: Projekt do testowania stron WWW. Wersja do testowania S3
 configVersion: 1
